# Java-Subset-Joos-Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  clang-format-all.sh  main.cpp  parser.y  zip_script.sh
driver/joosc/: main.cpp
driver/lexer/: main.cpp
driver/parser/: main.cpp
driver/simulator/: main.cpp
driver/test_tir/: main.cpp
include/ast/: ast.hpp  astExprNode.hpp  astManager.hpp  astNode.hpp  populateMethodPass.hpp  typeLinkerWorkaround.hpp
include/codeGen/: assemblyGenerator.hpp  astVisitor.hpp  canonicalizer.hpp  cfg.hpp  cfgBuilder.hpp  codeGenLabels.hpp  codeGenLables.hpp  dispatchVector.hpp  exprIRConverter.hpp  greedyReordering.hpp  instructionSelector.hpp  linkingResolver.hpp  tile.hpp
include/codeGen/assembly/: assembly.hpp  instruction.hpp  operand.hpp  registers.hpp
include/codeGen/registerAllocator/: basicAllocator.hpp  linearScanAllocator.hpp  registerAllocator.hpp
include/lexer/: myFlexLexer.hpp
include/parseTree/: parseTree.hpp  parseTreeVisitor.hpp  sourceNode.hpp
include/parser/: myBisonParser.hpp
include/staticCheck/: astValidator.hpp  cfg.hpp  cfgBuilder.hpp  envManager.hpp  environment.hpp  evaluator.hpp  exprResolver.hpp  forwardChecker.hpp  globalEnvironment.hpp  hierarchyCheck.hpp  liveVariableAnalysis.hpp  liveVariableAnalysisInfo.hpp  nameDisambiguator.hpp  reachabilityAnalysis.hpp  reachabilityAnalysisInfo.hpp  staticResolver.hpp  typeLinker.hpp  typeResolver.hpp
include/tir/: BinOp.hpp  CJump.hpp  Call.hpp  CallStmt.hpp  Comment.hpp  CompUnit.hpp  Const.hpp  ESeq.hpp  Exp.hpp  Expr.hpp  FuncDecl.hpp  InsnMapsBuilder.hpp  Jump.hpp  Label.hpp  Mem.hpp  Move.hpp  Name.hpp  Node.hpp  NodeFactory.hpp  Return.hpp  Seq.hpp  Simluator.hpp  Simulator.hpp  Stmt.hpp  TIR.hpp  TIRBuilder.hpp  Temp.hpp
joos_features/: features_while.txt
scripts/: a5_test_tir.sh  clang-format-all.sh  run-asm-test.sh  run-tests.sh
src/ast/: Declaration.hpp  ast.hpp  astNode.cpp  astNode.hpp  typeLinkerWorkaround.cpp
src/ast/parseTree/: parseTree.hpp
src/codeGen/: astVisitor.cpp  canonicalizer.cpp  cfgBuilder.cpp  dispatchVector.cpp  exprIRConverter.cpp  greedyReordering.cpp  instructionSelector.cpp
src/codeGen/registerAllocator/: linearScanAllocator.cpp
src/lexer/: joos1w.cpp  lex.yy.c  lexer.l  myFlexLexer.hpp  output.txt
src/parseTree/: expressionVisitor.cpp  parseTree.cpp  parseTree.hpp  parseTreeVisitor.cpp  parseTreeVisitor.hpp
src/parser/: myBisonParser.hpp  parser.tab.c  parser.y
src/staticCheck/: astValidator.cpp  cfg.cpp  cfgBuilder.cpp  envManager.cpp  envManager.hpp  environment.cpp  exprResolver.cpp  liveVariableAnalysis.cpp  nameDisambiguator.cpp  reachabilityAnalysis.cpp  staticResolver.cpp  typeLinker.cpp  typeResolver.cpp
src/tir/: InsnMapsBuilder.cpp  Simulator.cpp  TIR.cpp  TIRBuilder.cpp
src/weeder/: weeder.cpp  weeder.hpp
tests/helper/: process_inputs.sh
tests/input/: features_abstract.java  features_accessstaticfield.java  features_arbitrarylocaldeclaration.java  features_arbitraryreturn.java  features_arithmeticoperations.java  features_array.java  features_array_return.java  features_arraylength.java  features_boolean.java  features_booleanliterals.java  features_byte.java  features_callstaticmethods.java  features_char.java  features_characterescapes.java  features_charliterals.java  features_classimport.java  features_comment.java  features_comparisonoperations.java  features_compoundnames.java  features_constructoroverloading.java  features_eagerbooleanoperations.java  features_extends.java  features_externalcall.java  features_fieldinitializers.java  features_finalclasses.java  features_finalmethods.java  features_for.java  features_if.java  features_implements.java  features_implicitstringconcatenation.java  features_implicitsupercall.java  features_implicitthisforfields.java  features_implicitthisformethods.java  features_instanceof.java  features_int.java  features_interfaces.java  features_intliterals.java  features_javadoc.java  features_lazybooleanoperations.java  features_methodoverloading.java  (+35 more)
tests/output/: J1_1_AmbiguousName_AccessResultFromMethod.txt  features_abstract.txt  features_accessstaticfield.txt  features_arbitraryreturn.txt  features_array_return.txt  features_booleanliterals.txt  features_byte.txt  features_char.txt  features_charliterals.txt  features_classimport.txt  features_compoundnames.txt  features_eagerbooleanoperations.txt  features_extends.txt  features_externalcall.txt  features_if.txt  features_implicitstringconcatenation.txt  features_implicitthisforfields.txt  features_implicitthisformethods.txt  features_nonthisfieldaccess.txt  features_nullliteral.txt  features_omittedvoidreturn.txt  features_primitivecasts.txt  features_protectedconstructors.txt  features_protectedfields.txt  features_protectedmethods.txt  features_publicfields.txt  features_referencecasts.txt  features_short.txt  features_staticfielddeclaration.txt  features_staticmethoddeclaration.txt  restrictions_abstract_final.txt  restrictions_abstract_native.txt  restrictions_ascii.txt  restrictions_class_constructor.txt  restrictions_interface_body.txt  restrictions_interface_fields.txt  restrictions_multidimensional_array.txt  restrictions_native.txt  restrictions_static.txt  restrictions_static_final.txt  (+1 more)
(+44 files in other folders)
